fix(Blip Input): Fix input width and check icon display to prevent layout breaks

--- a/src/scss/components/_input.scss
+++ b/src/scss/components/_input.scss
@@ -29,7 +29,8 @@
   font-size: $bp-fs-6;
   background: $bp-color-white;
   margin-top: 0.2*$m;
-  width: calc(100% - 30px);
+  width: 100%;
+  margin-right: 10px;
   height: 1.9*$m;
   line-height: 1.9*$m;
   padding: 0;
@@ -204,8 +205,11 @@
 * Check
 */
 .bp-input-check {
-  visibility: visible;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background-color: $bp-color-white;
   font-size: 1.9*$m;
   line-height: 0.5*$m;
-  float: right;
+  padding-left: 5px;
 }
